[gd_scene load_steps=14 format=3 uid="uid://cmtc1he8psiam"]

[ext_resource type="Script" path="res://scenes/Menu_Scenes/Option_Menu/Option_Menu.gd" id="1_yvq76"]
[ext_resource type="Texture2D" uid="uid://bguwm80fa8y5h" path="res://assets/Menu_Items/Main_Menu/Start_Button.png" id="4_jagbq"]
[ext_resource type="Texture2D" uid="uid://bdxotaqv4gc8y" path="res://assets/HUD/wasd.png" id="5_5u8ca"]
[ext_resource type="Texture2D" uid="uid://blmfcavgak3sj" path="res://assets/HUD/mouse.png" id="6_47kfl"]
[ext_resource type="FontFile" uid="uid://bpxsbwrahbx28" path="res://assets/fonts/SevenSegment.ttf" id="6_deopy"]
[ext_resource type="Texture2D" uid="uid://srknxr48kitn" path="res://assets/Menu_Items/Main_Menu/Exit_Button.png" id="6_gchg3"]
[ext_resource type="Texture2D" uid="uid://ymw0apdcs66" path="res://assets/HUD/e.png" id="7_s1gu3"]
[ext_resource type="Texture2D" uid="uid://b8gddrqb235fi" path="res://assets/HUD/shift.png" id="8_c1uss"]
[ext_resource type="Texture2D" uid="uid://ckimxf7p2qcvv" path="res://assets/HUD/left_click.png" id="9_2jwlq"]

[sub_resource type="LabelSettings" id="LabelSettings_w37hv"]
font = ExtResource("6_deopy")
font_size = 30

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kueys"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hsql0"]
texture = ExtResource("4_jagbq")

[sub_resource type="LabelSettings" id="LabelSettings_4cmi0"]
font = ExtResource("6_deopy")

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
layer = 128
script = ExtResource("1_yvq76")

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_left = 0.0190972
anchor_top = -0.427469
anchor_right = 1.01562
anchor_bottom = 1.33951
offset_left = -27.0
offset_top = 284.0
offset_right = -27.0
offset_bottom = -220.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00766, 1.00444)
metadata/_edit_use_anchors_ = true

[node name="ButtonsVBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0

[node name="GridContainer" type="GridContainer" parent="MarginContainer2/ButtonsVBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
columns = 2

[node name="lbl_music" type="Label" parent="MarginContainer2/ButtonsVBoxContainer/GridContainer"]
layout_mode = 2
text = "music:"
label_settings = SubResource("LabelSettings_w37hv")

[node name="Music_Slider" type="HSlider" parent="MarginContainer2/ButtonsVBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.05
ticks_on_borders = true

[node name="lbl_SFX" type="Label" parent="MarginContainer2/ButtonsVBoxContainer/GridContainer"]
layout_mode = 2
text = "SFX:"
label_settings = SubResource("LabelSettings_w37hv")

[node name="SFX_Slider" type="HSlider" parent="MarginContainer2/ButtonsVBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.05
ticks_on_borders = true

[node name="full_screen" type="Button" parent="MarginContainer2/ButtonsVBoxContainer"]
layout_mode = 2
text = "Toggle Full screen"

[node name="score_grid" type="GridContainer" parent="MarginContainer2/ButtonsVBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
columns = 2

[node name="reset" type="Button" parent="MarginContainer2/ButtonsVBoxContainer/score_grid"]
clip_contents = true
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "Reset Score"

[node name="max" type="Button" parent="MarginContainer2/ButtonsVBoxContainer/score_grid"]
layout_mode = 2
text = "Unlock all Weapons"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/ButtonsVBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Exit_Button" type="Button" parent="MarginContainer2/ButtonsVBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_kueys")
theme_override_styles/pressed = SubResource("StyleBoxTexture_hsql0")
icon = ExtResource("6_gchg3")
flat = true

[node name="instuctions" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.356
anchor_top = 0.347
anchor_right = 0.356
anchor_bottom = 0.347
offset_left = 667.888
offset_top = 386.144
offset_right = 707.888
offset_bottom = 426.144

[node name="instuctions" type="Control" parent="instuctions"]
layout_mode = 1
anchor_left = 0.356
anchor_top = 0.347
anchor_right = 0.356
anchor_bottom = 0.347
offset_left = 724.76
offset_top = -59.88
offset_right = 764.76
offset_bottom = -19.88

[node name="ColorRect" type="ColorRect" parent="instuctions/instuctions"]
layout_mode = 1
anchors_preset = -1
anchor_left = -24.25
anchor_top = -13.028
anchor_right = -24.25
anchor_bottom = -13.028
offset_left = -92.0
offset_top = 103.12
offset_right = 145.0
offset_bottom = 451.12
color = Color(0.243137, 0.243137, 0.243137, 0.552941)

[node name="Label" type="Label" parent="instuctions/instuctions/ColorRect"]
layout_mode = 0
offset_left = 6.99988
offset_right = 399.0
offset_bottom = 157.0
text = "Instructions:

use              To move

              
use             To aim

press      to interact

press           to dodge

press            to shoot


collect bot parts to upgrade

Dont die
"
label_settings = SubResource("LabelSettings_4cmi0")

[node name="TextureRect" type="TextureRect" parent="instuctions/instuctions"]
layout_mode = 0
offset_left = -1023.0
offset_top = -387.0
offset_right = -971.0
offset_bottom = -347.0
texture = ExtResource("5_5u8ca")
stretch_mode = 2

[node name="TextureRect2" type="TextureRect" parent="instuctions/instuctions"]
layout_mode = 0
offset_left = -1017.0
offset_top = -339.0
offset_right = -974.0
offset_bottom = -289.0
texture = ExtResource("6_47kfl")
stretch_mode = 2

[node name="TextureRect3" type="TextureRect" parent="instuctions/instuctions"]
layout_mode = 0
offset_left = -1009.0
offset_top = -276.0
offset_right = -969.0
offset_bottom = -236.0
texture = ExtResource("7_s1gu3")
stretch_mode = 2

[node name="TextureRect4" type="TextureRect" parent="instuctions/instuctions"]
layout_mode = 0
offset_left = -1008.0
offset_top = -236.0
offset_right = -968.0
offset_bottom = -196.0
texture = ExtResource("8_c1uss")
stretch_mode = 2

[node name="TextureRect5" type="TextureRect" parent="instuctions/instuctions"]
layout_mode = 0
offset_left = -1006.0
offset_top = -208.0
offset_right = -963.0
offset_bottom = -158.0
texture = ExtResource("9_2jwlq")
stretch_mode = 2
